Added upload of vocabularies.
