# core/src/main/java/org/leialearns/rest/LeiaLearnsService.java
@@ -1,5 +1,6 @@
 package org.leialearns.rest;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.axonframework.queryhandling.QueryGateway;
 import org.leialearns.axon.StackCommandGateway;
@@ -14,11 +15,18 @@ import org.leialearns.model.ArrayOfString;
 import org.leialearns.model.ArrayOfSymbol;
 import org.leialearns.model.Symbol;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
+import org.springframework.util.StringUtils;
+import org.springframework.web.multipart.MultipartFile;
 
 import javax.annotation.PostConstruct;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.util.Arrays;
 import java.util.UUID;
 
@@ -28,11 +36,15 @@ public class LeiaLearnsService implements LeiaLearnsApiDelegate {
 
     private StackCommandGateway commandGateway;
     private final QueryGateway queryGateway;
+    private final ObjectMapper yamlObjectMapper;
 
     @Autowired
-    public LeiaLearnsService(StackCommandGateway commandGateway, QueryGateway queryGateway) {
+    public LeiaLearnsService(StackCommandGateway commandGateway, QueryGateway queryGateway,
+                             @Qualifier("yamlObjectMapper") ObjectMapper yamlObjectMapper) {
         this.commandGateway = commandGateway;
         this.queryGateway = queryGateway;
+        this.yamlObjectMapper = yamlObjectMapper;
+        log.info("YAML object mapper: {}", yamlObjectMapper);
     }
 
     @PostConstruct
@@ -66,7 +78,7 @@ public class LeiaLearnsService implements LeiaLearnsApiDelegate {
     @Override
     public ResponseEntity<Symbol> getOrCreateSymbol(String key, String symbolName) {
         try {
-            String vocabularyId = queryGateway.query(VocabularyByKeyQuery.builder().key(key).build(), String.class).get();
+            String vocabularyId = getVocabularyId(key);
             Symbol symbol = commandGateway.getOrCreateSymbol(GetOrCreateSymbolCommand.builder()
                 .id(vocabularyId)
                 .name(symbolName)
@@ -76,6 +88,26 @@ public class LeiaLearnsService implements LeiaLearnsApiDelegate {
             log.error("Internal server error", e);
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         }
+    }
+
+    private String getVocabularyId(String key) {
+        int sleep = 10;
+        int wait = 0;
+        do {
+            try {
+                String vocabularyId = queryGateway.query(VocabularyByKeyQuery.builder().key(key).build(), String.class).get();
+                if (vocabularyId != null) {
+                    return vocabularyId;
+                }
+                Thread.sleep(sleep);
+            } catch (Exception e) {
+                log.warn("Exception while getting vocabulary ID: {}", key, e);
+            }
+            sleep = sleep * 3 / 2;
+            wait += sleep;
+        } while (wait < 2000);
+        log.debug("Could not find vocabulary for key: {}", key);
+        return null;
     }
 
     @Override
@@ -107,12 +139,71 @@ public class LeiaLearnsService implements LeiaLearnsApiDelegate {
         return ResponseEntity.ok(null);
     }
 
-    private String getVocabularyId(String key) {
+    @Override
+    public ResponseEntity<Void> uploadVocabulary(MultipartFile data) {
+        log.info("Upload vocabulary YAML");
         try {
-            return queryGateway.query(VocabularyByKeyQuery.builder().key(key).build(), String.class).get();
-        } catch (Exception e) {
-            log.debug("Could not find vocabulary for key: {}", key, e);
-            throw new RuntimeException();
+            uploadVocabulary(data.getInputStream());
+            return ResponseEntity.ok(null);
+        } catch (RuntimeException | IOException exception) {
+            log.error("Exception while uploading vocabulary YAML", exception);
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(null);
+        }
+    }
+
+    private void uploadVocabulary(InputStream stream) throws IOException {
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(stream))) {
+            String line;
+            StringBuilder builder = new StringBuilder();
+            line = reader.readLine();
+            if (line == null) {
+                return;
+            }
+            if (!line.startsWith("%") && !line.equals("---")) {
+                builder.append(line);
+            }
+            while ((line = reader.readLine()) != null) {
+                if (line.equals("---")) {
+                    String item = builder.toString();
+                    builder = new StringBuilder();
+                    updateVocabulary(item);
+                } else {
+                    if (builder.length() > 0) {
+                        builder.append('\n');
+                    }
+                    builder.append(line);
+                }
+            }
+            updateVocabulary(builder.toString());
+        }
+    }
+
+    private void updateVocabulary(String item) {
+        if (StringUtils.isEmpty(item)) {
+            return;
+        }
+        try {
+            VocabularyUpdate update = yamlObjectMapper.readValue(item, VocabularyUpdate.class);
+            Symbol symbol = update.getSymbol();
+            String vocabulary = symbol.getVocabulary();
+            switch (update.getType()) {
+                case CREATE_VOCABULARY:
+                    createVocabulary(vocabulary);
+                    break;
+                case ADD_SYMBOL:
+                    getOrCreateSymbol(vocabulary, symbol.getName());
+                    break;
+                case CLOSE_VOCABULARY:
+                    closeVocabulary(vocabulary);
+                    break;
+                case DECLARE_VOCABULARY_OPEN:
+                    declareVocabularyOpen(vocabulary);
+                    break;
+                default:
+                    log.warn("Unknown vocabulary update type: {}", update.getType());
+            }
+        } catch (Exception exception) {
+            log.warn("Exception while importing vocabulary: {}: {}", exception.toString(), String.valueOf(exception.getCause()));
         }
     }
 }
