# core/src/main/java/org/leialearns/rest/VocabularyUpdateType.java
@@ -1,0 +1,8 @@
+package org.leialearns.rest;
+
+public enum VocabularyUpdateType {
+    CREATE_VOCABULARY,
+    ADD_SYMBOL,
+    CLOSE_VOCABULARY,
+    DECLARE_VOCABULARY_OPEN
+}
